--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,81 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil comeca em 10d 12h 20m 15s.
+                O maior evento de tecnologia do Brasil comeca em <span id="contador"></span>
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localizacão</b>
+                        Allianz Park - Barra Funda - São Paulo
+                    </li class="infos-bar__infos__item">
+                    <li class="infos-bar__infos__item">
+                        <b>Preco</b>
+                        A partir de r$ 120,00
+                    </li class="infos-bar__infos__item">
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        12/12/2025 às 19:00hrs
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">
+                    Garanta sua vaga
+                </a>
+            </div>
         </div>
     </header>
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--ux-ui event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data-Science</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
