--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -68,7 +68,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data-Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -79,7 +79,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab id reprehenderit qui, et maxime sunt impedit quos molestiae iure excepturi placeat consequatur, optio fugit corporis ducimus delectus hic suscipit culpa.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Backend">
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
